--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap");
 
 @import "_variables.css";
+@import "basic.min.css";
+@import "dropzone.min.css";
 
 
 body {
