--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -5,38 +5,18 @@
 
 {% block main %}
 <div class="flex-container">
-    <div class="foos-player">
-        {% include "svg/foos-player.svg" %}
-    </div>
-
 
     <form name="greeting-card" method="POST" action="/new" class="flex-container" >
-        <div class="color-pickers">
-            <label class="color-picker-label">
-                <input id="headColor" type="color" name="headColor" class="color-picker" value="#00dbff" /> 
-            </label>
-
-            <label class="color-picker-label">
-                <input id="shirtColor" type="color" name="shirtColor" class="color-picker" value="#10e1a8" /> 
-            </label>
-            
-            <label class="color-picker-label">
-                <input id="shortColor" type="color" name="shortsColor" class="color-picker" value="#e95e4f" /> 
-            </label>
-
-            <label class="color-picker-label">
-                <input id="sockColor" type="color" name="sockColor" class="color-picker" value="#00dbff" /> 
-            </label>
-
-            <label class="color-picker-label">
-                <input id="ballColor" type="color" name="ballColor" class="color-picker" value="#ffcc6e" /> 
-            </label>
-        </div>
-
         <div class="greeting-form">
                 <p>
                     <label for="message">Riddle</label>
                     <textarea cols="25" rows="10" id="riddle" name="riddle"></textarea>
+                </p>
+                <p>
+                    <label for="image">Image</label>
+                    <div id="drop-area">
+                        <input type="file" id="image" name="image" accept="image/*" class="dropzone" />
+                    </div>
                 </p>
                 <p>
                     <input type="submit" value="Create QR Code">
@@ -50,6 +30,8 @@
 {%set js%}
 {% include "js/core.js" %}
 {% include "js/colorPicker.js" %}
+{% include "js/dropzone.min.js" %}
+{% include "js/fileUploader.js" %}
 {% endset %}
 <script> {{js | safe}} </script>
 {% endblock %}
