--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -14,8 +14,8 @@
                 </p>
                 <p>
                     <label for="image">Image</label>
-                    <div id="drop-area">
-                        <input type="file" id="image" name="image" accept="image/*" class="dropzone" />
+                    <div id="drop-area" class="dropzone" style="background: rgba(255,255,255,0.2); border">
+                      
                     </div>
                 </p>
                 <p>
