Added image uploads

--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     <style>
        {% block extraStyle %}{% endblock %}
     </style>
-    <title>Foos invitation</title>
+    <title>Riddlr</title>
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
