--- a/src/site/_includes/layouts/riddle.njk
+++ b/src/site/_includes/layouts/riddle.njk
@@ -6,27 +6,11 @@
 
 {%block main%}
 <div class="flex-container">
-    
-    <div class="flex-container--column half">
-    <div class="greeting-card">
-        <h2>{{item.data.to}}</h2>
-        <div class="message">{{item.data.message}}</div>
-        <div class="from">- {{item.data.from}}</div>
-    </div>
-    </div>
-</div>
-<div class="flex-container">
 
             <div class="flex-container--column half">
-                <div>Here's your QR code</div>
                 <div class="greeting-card">
-                    <div style="color: white"> 
-                      <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150%26data=https://${hostName}/riddle/${riddlePath}" /> 
-                      <div>https://{{hostName}}/riddle/{{riddlePath}}</div>
-                    </div>
-                </div>
-                <div class="greeting-card">
-                    <div class="message">{{riddle}}</div>
+                    <div class="message">{{item.data.riddle}}</div>
+                    <img style="width: 100%;" src="{{item.data.imageLink}}" />
                 </div>
             </div>
           </div>
