--- a/src/site/noriddleforyou.njk
+++ b/src/site/noriddleforyou.njk
@@ -3,7 +3,7 @@
     layout: layouts/base.njk
 ---
 <div style="display:flex; justify-content:center;"> 
-<h1>No invite for you :(</h1>
+<h1>No riddl for you :(</h1>
 </div>
 
 <div style="display:flex; justify-content:center;"> 
