--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
     <style>
        {% block extraStyle %}{% endblock %}
     </style>
-    <title>🎩 Riddlr</title>
+    <title>Riddlr</title>
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
