Set max width on image

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -20,7 +20,7 @@
                     <label for="image">Image</label>
                         <input id="image-upload" type="file" name="image" acccept="image/*" />
                         <input id="image-link" type="hidden" name="imageLink" />
-                        <img style="display: none; width: 100%;" id="image-preview" />
+                        <img style="display: none; width: 100%; max-width: 500px;" id="image-preview" />
                 </p>
                 <p>
                     <div id="loading" style="display:none; margin-bottom: 5px;">Uploading picture...</div>
